--- a/client/src/components/home-page/home.css
+++ b/client/src/components/home-page/home.css
@@ -1,24 +1,15 @@
 body{
-  position: relative;
-  height: 100%;
   width: 100%;
-  /*what background should we use, if any??*/
-  background-repeat: no-repeat;
-  background-size: cover;
-  
+  height: 100%;
+  position: relative;
 }
-
 /*The header has the search bar and the logo, most of this css is to center everything*/
+/*I haven't actually centred this properly vertically!!*/
 .Home header {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 50%);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  width: 100%;
+  transform: translate(-50%, 60%);
   
 }
 
@@ -27,6 +18,7 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
+  
 }
 
 /*Align the logo and the searchbar 
