--- a/client/src/components/code-or-die/CodeOrDie.css
+++ b/client/src/components/code-or-die/CodeOrDie.css
@@ -1,1 +1,6 @@
 /*  classnames end with cd to makr as code or die*/
+
+@font-face {
+    font-family: kranky;
+    src: url(https://www.1001fonts.com/kranky-font.html);
+} 
